--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ repositories {
     }
 }
 
-def jerseyVersion = "2.29.1"
+def jerseyVersion = "2.32"
 
 dependencies {
     implementation 'org.codehaus.groovy:groovy-all:2.5.8'
@@ -42,20 +42,19 @@ dependencies {
     implementation "org.glassfish.jersey.containers:jersey-container-servlet:$jerseyVersion"
     implementation "org.glassfish.jersey.media:jersey-media-json-jackson:$jerseyVersion"
     implementation "org.glassfish.jersey.inject:jersey-hk2:$jerseyVersion"
-    implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.10.0'
+    implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.11.3'
 
-    implementation 'org.slf4j:slf4j-nop:1.7.28'
-    implementation 'io.swagger:swagger-jersey2-jaxrs:1.5.23'
+    implementation 'org.slf4j:slf4j-nop:1.7.30'
+    implementation 'io.swagger:swagger-jersey2-jaxrs:1.6.2'
 
-    implementation 'com.trevorism:secure-utils:1.0.2'
-    implementation 'com.trevorism:datastore-client:1.2.0'
-    implementation 'com.trevorism:eventhub-client:1.4.2'
+    implementation 'com.trevorism:secure-http-utils:0.7.0'
+    implementation 'com.trevorism:datastore-client:2.3.0'
+    implementation 'com.trevorism:eventhub-client:2.3.0'
 
     acceptanceImplementation 'io.cucumber:cucumber-groovy:4.7.1'
-    acceptanceImplementation 'com.trevorism:http-utils:1.0.2'
-    acceptanceImplementation 'org.apache.httpcomponents:httpclient:4.5.10'
+    acceptanceImplementation 'com.trevorism:http-utils:1.1.0'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.1'
 }
 
 
@@ -64,7 +63,7 @@ appengine {
         projectId = "trevorism-testing"
         stopPreviousVersion = true
         promote = true
-        version = "0-0-1"
+        version = "0-1-0"
     }
 }
 
@@ -76,4 +75,13 @@ task deliver {
     dependsOn("build","appengineDeploy", "acceptance")
     acceptance.mustRunAfter("appengineDeploy")
     appengineDeploy.mustRunAfter("check")
+}
+
+processResources{
+    doLast{
+        copy{
+            from "${System.getProperty("user.home")}/${project.name}/secrets.properties"
+            into "build/resources/main"
+        }
+    }
 }
