Update gradle version; add test suite comments

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
             url "https://plugins.gradle.org/m2/"
         }
         maven {
-            url uri("http://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
+            url uri("https://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
         }
     }
     dependencies {
@@ -30,7 +30,7 @@ apply plugin: "com.trevorism.gradle.release"
 repositories {
     mavenCentral()
     maven {
-        url uri("http://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
+        url uri("https://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
     }
 }
 
