Trying to schedule updates to the test details after running the test

--- a/build.gradle
+++ b/build.gradle
@@ -34,21 +34,23 @@ repositories {
     }
 }
 
-def jerseyVersion = "2.32"
+def jerseyVersion = "2.35"
 
 dependencies {
-    implementation 'org.codehaus.groovy:groovy-all:2.5.8'
+    implementation 'org.codehaus.groovy:groovy-all:2.5.15'
 
     implementation "org.glassfish.jersey.containers:jersey-container-servlet:$jerseyVersion"
     implementation "org.glassfish.jersey.media:jersey-media-json-jackson:$jerseyVersion"
     implementation "org.glassfish.jersey.inject:jersey-hk2:$jerseyVersion"
-    implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.11.3'
+    implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.13.1'
 
-    implementation 'org.slf4j:slf4j-nop:1.7.30'
-    implementation 'io.swagger:swagger-jersey2-jaxrs:1.6.2'
+    implementation 'org.slf4j:slf4j-nop:1.7.35'
+    implementation 'io.swagger:swagger-jersey2-jaxrs:1.6.4'
+    implementation 'com.google.code.gson:gson:2.8.9'
 
+    implementation 'com.trevorism:schedule-client:0.2.0'
     implementation 'com.trevorism:secure-http-utils:0.7.0'
-    implementation 'com.trevorism:datastore-client:2.3.0'
+    implementation 'com.trevorism:datastore-client:2.4.0'
     implementation 'com.trevorism:eventhub-client:2.3.0'
 
     acceptanceImplementation 'io.cucumber:cucumber-groovy:4.7.1'
@@ -63,7 +65,7 @@ appengine {
         projectId = "trevorism-testing"
         stopPreviousVersion = true
         promote = true
-        version = "0-1-0"
+        version = "0-2-0"
     }
 }
 
