Error checking and alerting

--- a/build.gradle
+++ b/build.gradle
@@ -46,12 +46,13 @@ dependencies {
 
     implementation 'org.slf4j:slf4j-nop:1.7.35'
     implementation 'io.swagger:swagger-jersey2-jaxrs:1.6.4'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
     implementation 'com.trevorism:schedule-client:0.2.0'
     implementation 'com.trevorism:secure-http-utils:0.7.0'
     implementation 'com.trevorism:datastore-client:2.4.0'
     implementation 'com.trevorism:eventhub-client:2.3.0'
+    implementation 'com.trevorism:threshold-client:0.3.0'
 
     acceptanceImplementation 'io.cucumber:cucumber-groovy:4.7.1'
     acceptanceImplementation 'com.trevorism:http-utils:1.1.0'
