--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,23 @@
 buildscript {
+    ext {
+        creds = {
+            username = findProperty("github.user") ?: System.getenv("GITHUB_ACTOR")
+            password = findProperty("github.token") ?: System.getenv("GITHUB_TOKEN")
+        }
+    }
     repositories {
         mavenCentral()
         maven {
             url "https://plugins.gradle.org/m2/"
         }
         maven {
-            url uri("https://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
+            url uri("https://maven.pkg.github.com/trevorism/gradle-acceptance-plugin")
+            credentials creds
         }
     }
     dependencies {
-        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.1.0'
-        classpath 'com.trevorism:gradle-acceptance-plugin:2.1.0'
-        classpath 'com.trevorism:gradle-gae-deploy-plugin:1.3.0'
-        classpath 'com.trevorism:gradle-release-plugin:0.5.0'
+        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.4.5'
+        classpath 'com.trevorism:gradle-acceptance-plugin:2.2.0'
     }
 }
 
@@ -24,17 +29,16 @@ plugins {
 
 apply plugin: 'com.google.cloud.tools.appengine'
 apply plugin: "com.trevorism.gradle.acceptance"
-apply plugin: "com.trevorism.gradle.gae.deploy"
-apply plugin: "com.trevorism.gradle.release"
 
 repositories {
     mavenCentral()
     maven {
-        url uri("https://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
+        url uri("https://maven.pkg.github.com/trevorism/secure-http-utils")
+        credentials creds
     }
 }
 
-def jerseyVersion = "2.35"
+def jerseyVersion = "2.37"
 
 dependencies {
     implementation 'org.codehaus.groovy:groovy-all:2.5.15'
@@ -42,19 +46,17 @@ dependencies {
     implementation "org.glassfish.jersey.containers:jersey-container-servlet:$jerseyVersion"
     implementation "org.glassfish.jersey.media:jersey-media-json-jackson:$jerseyVersion"
     implementation "org.glassfish.jersey.inject:jersey-hk2:$jerseyVersion"
-    implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.13.1'
+    implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.13.4'
 
-    implementation 'org.slf4j:slf4j-nop:1.7.35'
-    implementation 'io.swagger:swagger-jersey2-jaxrs:1.6.4'
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'org.slf4j:slf4j-nop:1.7.36'
+    implementation 'io.swagger:swagger-jersey2-jaxrs:1.6.6'
+    implementation 'com.google.code.gson:gson:2.9.1'
 
-    implementation 'com.trevorism:secure-http-utils:0.7.0'
-    implementation 'com.trevorism:datastore-client:2.4.0'
-    implementation 'com.trevorism:eventhub-client:2.3.0'
-    implementation 'com.trevorism:threshold-client:0.3.0'
+    implementation 'com.trevorism:secure-http-utils:1.0.0'
+    implementation 'com.trevorism:datastore-client:2.7.0'
+    implementation 'com.trevorism:reactions-client:0.2.0'
 
     acceptanceImplementation 'io.cucumber:cucumber-groovy:4.7.1'
-    acceptanceImplementation 'com.trevorism:http-utils:1.1.0'
 
     testImplementation 'junit:junit:4.13.2'
 }
@@ -71,19 +73,4 @@ appengine {
 
 check {
     dependsOn('jacocoTestReport')
-}
-
-task deliver {
-    dependsOn("build","appengineDeploy", "acceptance")
-    acceptance.mustRunAfter("appengineDeploy")
-    appengineDeploy.mustRunAfter("check")
-}
-
-processResources{
-    doLast{
-        copy{
-            from "${System.getProperty("user.home")}/${project.name}/secrets.properties"
-            into "build/resources/main"
-        }
-    }
 }
