Cucumber run in test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,8 @@ on:
       TEST_TYPE:
         required: false
         type: string
-        default: acceptance
-        description: Either 'unit' or 'acceptance' or 'cypress'
+        default: cucumber
+        description: Either 'unit' or 'cucumber' or 'cypress'
 
 permissions: write-all
 
@@ -19,7 +19,7 @@ jobs:
       JDK_VERSION: 17
 
   call-accept:
-    if: ${{inputs.TEST_TYPE == 'acceptance'}}
+    if: ${{inputs.TEST_TYPE == 'cucumber'}}
     uses: trevorism/actions-workflows/.github/workflows/accept.yml@master
     with:
       JDK_VERSION: 17
