--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -1,2 +1,7 @@
 runtime: java17
 entrypoint: java -jar testing-all.jar
+handlers:
+  - url: /.*
+    secure: always
+    redirect_http_response_code: 301
+    script: auto
