--- a/build.gradle
+++ b/build.gradle
@@ -55,11 +55,10 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    implementation 'com.trevorism:secure-http-utils:2.1.0'
-    implementation 'com.trevorism:datastore-client:2.8.0'
-    implementation 'com.trevorism:reactions-client:0.4.1'
-    implementation 'com.trevorism:schedule-client:0.8.0'
-    implementation 'com.trevorism:micronaut-security-utils:0.7.2'
+    implementation 'com.trevorism:micronaut-utility-beans:0.1.0'
+    implementation 'com.trevorism:datastore-client:3.1.0'
+    implementation 'com.trevorism:reactions-client:0.6.0'
+    implementation 'com.trevorism:schedule-client:0.9.0'
 
     runtimeOnly("ch.qos.logback:logback-classic")
     implementation 'org.slf4j:slf4j-simple:2.0.6'
