Upgrade to micronaut 4

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.4.5'
+        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.5.0'
         classpath 'com.trevorism:gradle-acceptance-plugin:2.3.1'
     }
 }
@@ -24,7 +24,8 @@ buildscript {
 plugins {
     id("groovy")
     id("com.github.johnrengelman.shadow") version "8.1.1"
-    id("io.micronaut.application") version "3.7.8"
+    id("io.micronaut.application") version "4.2.0"
+    id "jacoco"
 }
 
 apply plugin: 'com.google.cloud.tools.appengine'
@@ -41,12 +42,14 @@ repositories {
 }
 
 dependencies {
+    annotationProcessor("io.micronaut.validation:micronaut-validation-processor")
+
     implementation("io.micronaut.groovy:micronaut-runtime-groovy")
     implementation("io.micronaut:micronaut-jackson-databind")
-    implementation("io.micronaut:micronaut-validation")
+    implementation("io.micronaut.security:micronaut-security")
+    runtimeOnly("org.yaml:snakeyaml")
 
     implementation("jakarta.annotation:jakarta.annotation-api")
-    implementation 'io.projectreactor:reactor-core:3.5.5'
 
     implementation("io.swagger.core.v3:swagger-annotations")
     compileOnly("io.micronaut.openapi:micronaut-openapi"){
@@ -55,8 +58,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    implementation 'com.trevorism:micronaut-utility-beans:0.1.0'
-    implementation 'com.trevorism:datastore-client:3.1.0'
+    implementation 'com.trevorism:micronaut-utility-beans:1.2.0'
+    implementation 'com.trevorism:datastore-client:3.2.0'
     implementation 'com.trevorism:reactions-client:0.6.0'
     implementation 'com.trevorism:schedule-client:0.9.0'
 
@@ -89,7 +92,7 @@ appengine {
     stage.artifact = "${buildDir}/libs/${project.name}-all.jar"
     deploy {
         projectId = "trevorism-testing"
-        version = "0-7-1"
+        version = "0-8-0"
         stopPreviousVersion = true
         promote = true
 
