Add printout to debug action workflow

--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,7 @@ appengine {
 
 test {
     systemProperty ("trevorism.test.event", findProperty("trevorism.test.event") == "enabled" ? project.name : null)
+    println "trevorism.test.event: ${findProperty("trevorism.test.event")}"
 }
 
 jacocoTestCoverageVerification {
