--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.8.0'
-        classpath 'com.trevorism:gradle-acceptance-plugin:2.5.0'
+        classpath 'com.trevorism:gradle-acceptance-plugin:2.6.0'
     }
 }
 
@@ -60,7 +60,6 @@ dependencies {
     implementation 'com.trevorism:micronaut-utility-beans:1.3.0'
     implementation 'com.trevorism:datastore-client:3.2.0'
     implementation 'com.trevorism:reactions-client:0.6.0'
-    implementation 'com.trevorism:schedule-client:0.9.0'
 
     runtimeOnly("ch.qos.logback:logback-classic")
 
@@ -105,8 +104,9 @@ jacocoTestCoverageVerification {
     violationRules {
         rule {
             limit {
-                minimum = 0.5
+                minimum = 0.4
             }
         }
     }
 }
+build.dependsOn jacocoTestCoverageVerification
