--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.8.0'
-        classpath 'com.trevorism:gradle-acceptance-plugin:2.6.0'
+        classpath 'com.trevorism:gradle-acceptance-plugin:2.7.2'
     }
 }
 
@@ -57,14 +57,20 @@ dependencies {
     }
 
     implementation 'com.google.code.gson:gson:2.11.0'
-    implementation 'com.trevorism:micronaut-utility-beans:1.3.0'
-    implementation 'com.trevorism:datastore-client:3.2.0'
+    implementation ('com.trevorism:micronaut-utility-beans:1.3.0'){
+        exclude module:"slf4j-nop"
+        exclude module:"slf4j-simple"
+    }
+    implementation ('com.trevorism:datastore-client:3.2.0'){
+        exclude module:"slf4j-nop"
+    }
     implementation 'com.trevorism:reactions-client:0.6.0'
 
     runtimeOnly("ch.qos.logback:logback-classic")
 
     testImplementation 'com.trevorism:test-result-events:0.3.0'
     acceptanceImplementation 'io.cucumber:cucumber-groovy:6.10.4'
+    acceptanceImplementation 'ch.qos.logback:logback-classic:1.5.6'
 }
 
 application {
@@ -90,7 +96,7 @@ appengine {
     stage.artifact = layout.buildDirectory.file("libs/${project.name}-all.jar")
     deploy {
         projectId = "trevorism-testing"
-        version = "0-9-2"
+        version = "0-9-3"
         stopPreviousVersion = true
         promote = true
     }
@@ -109,4 +115,5 @@ jacocoTestCoverageVerification {
         }
     }
 }
+
 build.dependsOn jacocoTestCoverageVerification
