Send event for web tests from testing api

--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,9 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'com.trevorism:micronaut-utility-beans:1.6.0'
-    implementation 'com.trevorism:datastore-client:4.0.0'
+    implementation 'com.trevorism:datastore-client:4.1.0'
     implementation 'com.trevorism:reactions-client:0.6.0'
+    implementation 'com.trevorism:event-client:0.1.1'
 
     runtimeOnly("ch.qos.logback:logback-classic")
 
@@ -91,7 +92,7 @@ appengine {
     stage.artifact = layout.buildDirectory.file("libs/${project.name}-all.jar")
     deploy {
         projectId = "trevorism-testing"
-        version = "1-1-0"
+        version = "1-2-0"
         stopPreviousVersion = true
         promote = true
     }
